# XMP_Toolkit_SDK_Android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/demousenativefile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/cpp/include/: XMP_Environment.h
app/src/main/cpp/include/client-glue/: TXMPFiles.incl_cpp  TXMPMeta.incl_cpp  TXMPUtils.incl_cpp  WXMPFiles.hpp  WXMPMeta.hpp
app/src/main/java/com/example/demousenativefile/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/demousenativefile/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
